# keepbooks

./: .gitignore  .gitlab-ci.yml  README.md  default.nix  dockerimage.nix  keepbooks.cabal  package.yaml
app/: Main.hs  PlpdMailTemplate.hs
packaging/: PKGBUILD  package-arch.sh
