name:           keepbooks
version:        0.1
synopsis:       Keep your books like a pro!
category:       Web
homepage:       https://github.com/plapadoo/keepbooks#readme
bug-reports:    https://github.com/plapadoo/keepbooks/issues
author:         Philipp Middendorf
maintainer:     Philipp Middendorf <middendorf@plapadoo.de>
copyright:      plapadoo UG 2018
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/plapadoo/keepbooks

executable keepbooks
  main-is: Main.hs
  hs-source-dirs:
      app
  default-extensions: OverloadedStrings NoImplicitPrelude
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base
    , filepath
    , directory
    , time
    , unix
    , optparse-applicative
  other-modules:
      PlpdMailTemplate
  default-language: Haskell2010
